assets/style.css
/* source of book https://codepen.io/Penno/pen/MJevVP */
@import 'reset.css';

body {
  font-family: sans-serif;
  background-image: radial-gradient(#ece0ec 10%, transparent 0);
  background-size: 20px 20px;
}

header {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 2rem;
}

main {
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 100vw;
}

h1 {
  font-size: 2.8rem;
  font-family: "Times New Roman", Times, serif;
  margin-bottom: 2rem;
  align-self: center;
}

h2 {
  font-size: 2.4rem;
  margin-bottom: 2rem;
  font-weight: bold;
}

h3 {
  font-size: 1.9rem;
  margin-top: 1.5rem;
}

h4 {
  font-size: 1.5rem;
  margin-top: 2.5rem;
  margin-bottom: 1rem;
  font-weight: bold;
}

h5 {
  font-size: 1.2rem;
  font-weight: bold;
  margin-bottom: 1.2rem;
}

p, li {
  font-size: 1.2rem;
  margin-bottom: 0.5rem;
  line-height: 1.7;
  max-width: 85%;
}

p li {
  list-style: none;
  min-width: 370px;
  max-width: 85%;
}

article li::before {
  content: "⬤";
  color: #754575;
  box-shadow: 0 -4px -2px 0 white, 0 4px 4px 2px #fafafa;
  margin-right: 1rem;
  font-size: 0.7rem;
}

.weekly-nerd-book {
  max-width: 80vw;
  max-height: 700px;
  margin-bottom: 11rem;
}

.article_toggle {
  display: flex;
  flex-direction: row;
  background-color: #ece0ec;
  border-radius: 5px;
  padding: 1rem;
  margin: 1rem;
  justify-content: space-around;
  /* align-content: center; */
}

.article_toggle li {
  align-self: center;
  border-bottom: 3px solid #754575;
  margin-bottom: 0;
}

.article_toggle a {
  font-size: 1.4rem;
  font-weight: bolder;
  text-decoration: none;
  color: black;
}

.artikelen {
  display: flex;
  flex-direction: column;
  max-width: 80vw;
}

.artikelen h2 {
  margin-top: 3rem;
}

.artikelen h2::before {
  content: "🦄";
  color: #754575;
  box-shadow: 0 -4px -2px 0 white, 0 4px 4px 2px #fafafa;
  margin-right: 1rem;
  /* font-size: 0.7rem; */
}

.artikelen h3 {
  margin-bottom: 1.5rem;
  margin-top: 2rem;
}

.artikelen img {
  max-width: 100%;
  margin-top: 0.7rem;
  margin-bottom: 0.7rem;
  max-height: 60vh;
}

blockquote {
  background: #f9f9f9;
  border-left: 10px solid #ccc;
  margin: 1.5rem 10px;
  padding: 0.5rem 10px;
  max-width: 80%;
}

blockquote:before {
  color: #ccc;
  font-size: 4rem;
  line-height: 0.1rem;
  margin-right: 1rem;
  vertical-align: -0.4rem;
}

blockquote p {
  display: inline;
  font-style: italic;
}

strong {
  font-weight: bold;
}

.book {
  width: 100%;
  height: 100%;
  perspective: 1500px;
  user-select: none;
  display: flex;
  flex-wrap: wrap;
  margin-top: 1rem;
}

.book h2 {
  font-family: serif;
  letter-spacing: 1.8px;
}

.page {
  width: 49%;
  min-width: 400px;
  height: 98%;
  padding: 20px;
  position: absolute;
  top: 1%;
  left: 50%;
  font-size: 1.2rem;
  color: white;
  background-color: black;
  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0) 10%);
  transition: transform 0.5s;
  transform: rotateY(-180deg);
  backface-visibility: hidden;
  transform-style: preserve-3d;
  transform-origin: left center;
  z-index: 4;
}

.page:nth-of-type(2n) {
  left: 1px;
  background-image: linear-gradient(to left, rgba(0, 0, 0, 0.12) 0%, rgba(0, 0, 0, 0) 10%);
  transform-origin: right center;
  transform: rotateY(0);
}

.page:nth-of-type(2n):not(.cover) {
  left: calc(1% + 1px);
}

.page h2 {
  text-align: center;
}

.page h2+p::first-letter {
  font-size: 44px;
  float: left;
  height: 44px;
  line-height: 36px;
  vertical-align: baseline;
  margin-right: 6px;
  border-radius: 5px;
}

input[type="radio"] {
  display: none;
}

input:checked~.page {
  transform: rotateY(0);
}

input:checked~.page:nth-of-type(2n) {
  transform: rotateY(180deg);
}

input:checked~.page:nth-of-type(2n-1) {
  z-index: 3;
}

input:checked~.page:nth-of-type(2n-1)~.page:nth-of-type(2n-1) {
  z-index: 1;
}

input:checked+.page+.page+input+.page {
  z-index: 2 !important;
}

.cover {
  width: 50%;
  height: 100%;
  top: 0;
  border-radius: 0 3px 3px 0;
  background-color: #5c365c;
}

.cover h1 {
  color: #754575;
  text-align: center;
  text-shadow: -1px -1px 2px rgba(0, 0, 0, 0.5);
  margin-top: 50%;
  position: relative;
}

.cover h1::after {
  content: "";
  display: block;
  width: 60px;
  position: absolute;
  bottom: -20px;
  margin-left: -30px;
  left: 50%;
  border-top: 1px solid #754575;
  box-shadow: -1px -1px 2px rgba(0, 0, 0, 0.5);
}

.cover+.cover {
  border-radius: 3px 0 0 3px;
}

.cover:first-of-type, .cover:last-of-type {
  background-image: none;
}

.cover:first-of-type::before, .cover:last-of-type::before {
  content: "";
  width: calc(100% - 20px);
  height: calc(100% - 20px);
  border: 2px dashed rgba(0, 0, 0, 0.2);
  position: absolute;
  top: 9px;
  left: 9px;
}

.sketchnotes {
  max-width: 100%;
  max-height: 100%;
}

.page {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.book p {
  max-width: 85%;
  max-height: 100%;
  font-size: 1.2rem;
}

.weekly-nerd-inleiding {
  padding: 1rem 0 3rem 1rem;
  max-width: 50%;
  max-height: 100%;
  font-size: 1.3rem;
  margin-top: 1rem;
}

.artikelen_wrapper .artikel {
  padding: 2rem 4rem;
  border-radius: 6px;
  background: #fefefe;
  box-shadow: inset 6px 6px 12px #f1f1f1,
    inset -6px -6px 12px #ffffff;
  margin-bottom: 4rem;
}

.oprah {
  display: inline-flex;
  float: right;
  width: 20rem;
  box-shadow:  4px 3px 5px #f1f1f1,
     -3px -3px 6px #f1f1f1;

}

/* EXAMPLES IN 'Atomic Design'-ARTICLE */
.example {
  padding: 2rem;
  border-radius: 6px;
  background: #fefefe;
  box-shadow: inset 1px 1px 3px #f1f1f1,
    inset -1px -1px 2px #f1f1f1;
  min-width: 370px;
  width: 40%;
  max-width: 90%;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  align-items: flex-start;
  margin: 2rem 0rem;
}

.bigger-example {
  width: 95%;

}

.header {
 display: flex;
 flex-direction: row;
 align-items: center;
 justify-content: space-between;
 background-color: #F2F5FF;
 border-radius: 6px;
 width: 97.5%;
 margin-top: 2rem;
 padding: 1rem;
}

.header h1, .logo {
  padding: 1rem;
}

.header h1 {
  font-size: 1.5rem;
  font-family: sans-serif;
  margin: 0;
  line-height: 1.3;
  padding: 0rem 2rem;
}

.header .logo {
  border: 2px solid #FFEEEE;
  background-color: white;
  padding: 1rem 1.5rem;
  margin-left: 1rem;
  font-weight: 100;
}

.header nav ul {
 display: flex;
 flex-direction: row;
 justify-content: space-between;
 border-left: 3px solid #490c63;
 align-self: center;
 margin-right: 0.5rem;
}

.header nav ul li::before{
  list-style: none;
  content: "";
}

.header nav ul li {
  margin-bottom: 0;
}

.header nav ul li a {
  padding: 1rem;
  font-size: 1.5rem;
  font-weight: 550;
  letter-spacing: 1.3px;
  text-decoration: none;
  color: black;
}
.header .searchForm {
  margin: 0;
}

.header .searchForm label {
  display: none;
}

.header .searchForm input {
  font-size: 1rem;
  background-color: white;
}

.header .searchForm button {
  font-size: 1rem;
}


.button {
  display: flex;
  flex-direction: column;
}

.button button {
  display: flex;
  justify-content: center;
  align-self: center;
  padding: 1rem 2rem;
  width: 15rem;
  border-radius: 6px;
  background-color: #490c63;
  color: white;
  font-size: 2rem;
  font-weight: bold;
  font-family: sans-serif;
  letter-spacing: 1.3px;
}

.searchForm {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin-top: 2rem;
  justify-content: flex-start;
  width: 100%;
}

.searchForm label {
  width: 100%;
  font-size: 1.5rem;
  padding-left: 2rem;
  padding-bottom: 0.3rem;
}

.searchForm input, .searchForm button {
  display: flex;
  justify-content: center;
  align-self: center;
  padding: 1rem 2rem;
  font-size: 1.5rem;
  box-shadow: 3px 3px 2px #F2F5FF;
  width: 50%;
}

.searchForm input {
  width: 60%;
  border-radius: 6px 0px 0px 6px;
  border: none;
  background-color: #F2F5FF;
}

.searchForm button {
  width: 40%;
  border-radius: 0px 6px 6px 0px;
  border: none;
  background-color: #490c63;
  color: white;
  font-size: 1.5rem;
  font-weight: bold;
  letter-spacing: 1.3px;
}

.template {
  display: flex;
  flex-direction: column;
  width: 100%;
  max-height: 35rem;
  overflow: scroll;
}

.template main, footer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-bottom: 4rem;
}

.template main h1 {
  font-size: 3rem;
  margin-top: 1.5rem;
}

.template .posts {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
}

.template article {
  min-width: 20rem;
  max-width: 25rem;
  background-color: #FFEEEE;
  padding: 1rem 2rem;
  border-radius: 6px;
  margin: 1rem;
}


.template article h3 {
  font-size: 1.5rem;
  padding-bottom: 0.4rem;
  border-bottom: 1px solid black;
  max-width: 80%;
}

.template article p {
  font-size: 1.2rem;
}

.template footer {
  margin-left: -14%;
}

.template footer p {
  font-size: 1.2rem;
  margin: 0;
}

.template footer p span {
  padding: 0rem 1rem;
  color: #d8d5e0;
  font-weight: 800;
}

.template main subtitle {
  margin-top: -1rem;
  margin-bottom: 1rem;
  font-style: italic;
}

.webpage h5 {
  margin-bottom: 3rem;
}

.webpage main h1 {
  margin-top: 3rem;
}

.webpage .posts {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
}

.webpage article {
  min-width: 25rem;
  max-width: 35rem;
  width: 28rem;
  background-color: #FFEEEE;
  padding: 1rem 2rem;
  border-radius: 6px;
  margin: 1rem;
}


.webpage article h3 {
  font-size: 1.5rem;
  padding-bottom: 0.4rem;
  border-bottom: 1px solid black;
  max-width: 90%;
}

.webpage article p {
  font-size: 1.2rem;
  max-width: 95%;
}

.webpage footer {
  margin: 0;
  margin-left: 14%;
  justify-content: center;
  align-items: center;
  width: 100%;
}

.webpage footer p {
  align-self: flex-start;
  flex-wrap: wrap;
  /* width: 114%; */
  /* min-width: 114%; */
  /* max-width: 114%; */
  /* margin-left: -14%; */
}

.webpage footer p span {
  border-left: 1px solid #4f4370;
}

.webpage footer p span a {
  text-decoration: none;
  color: #d8d5e0;
  font-weight: 800;
  font-size: 1.2rem;
  padding: 0.75rem;
}

.first-child {
  border-left: none;
}

